--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "@nrwl/cypress": "10.0.6",
     "@nrwl/express": "^10.0.6",
     "@nrwl/jest": "10.0.6",
+    "@nrwl/node": "10.0.6",
     "@nrwl/workspace": "10.0.6",
+    "@types/express": "^4.17.0",
     "@types/jest": "25.1.4",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
@@ -66,8 +68,6 @@
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.9.3",
-    "@nrwl/node": "10.0.6",
-    "@types/express": "4.17.0"
+    "typescript": "~3.9.3"
   }
 }
