--- a/package.json
+++ b/package.json
@@ -40,9 +40,16 @@
     "@ngrx/store": "^9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
     "@nrwl/angular": "10.0.6",
+    "@types/randomstring": "^1.1.6",
+    "body-parser": "^1.19.0",
+    "convict": "^6.0.0",
     "express": "4.17.1",
+    "mongoose": "^5.9.27",
     "ngrx-store-freeze": "^0.2.4",
+    "pug": "^3.0.0",
+    "randomstring": "^1.1.5",
     "rxjs": "~6.5.5",
+    "slugify": "^1.4.5",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
@@ -57,10 +64,11 @@
     "@nrwl/workspace": "10.0.6",
     "@types/express": "^4.17.0",
     "@types/jest": "25.1.4",
+    "@types/mongoose": "^5.7.34",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
     "cypress": "^4.1.0",
-    "dotenv": "6.2.0",
+    "dotenv": "^6.2.0",
     "eslint": "6.8.0",
     "jest": "25.2.3",
     "jest-preset-angular": "8.1.2",
