--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/randomstring": "^1.1.6",
     "body-parser": "^1.19.0",
     "convict": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "mongoose": "^5.9.27",
     "ngrx-store-freeze": "^0.2.4",
