--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "ng serve",
-    "start:dev": "./scripts/start.dev.sh",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -26,7 +25,8 @@
     "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "heroku-postbuild": "chmod a+x ./scripts/heroku.build.sh && ./scripts/heroku.build.sh"
   },
   "private": true,
   "dependencies": {
